# apkdl

./: README.md  pyproject.toml
src/apkdl/: __init__.py  cli.py  client.py
