[project]
name = "apkdl"
version = "0.1.0"
description = "Download Android APKs from UpToDown"
readme = "README.md"
authors = [
    { name = "clawdbot-silly-waddle", email = "clawdbot-silly-waddle@users.noreply.github.com" }
]
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["apk", "android", "uptodown", "downloader"]
dependencies = [
    "httpx>=0.28",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
apkdl = "apkdl.cli:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
